tests/anp_bad_path_test_18/anp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-udp
spec:
  priority: 4
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  ingress:
  - name: "allow-from-ravenclaw-everything"
    action: "Ok" # error : unrecognized action
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-ravenclaw-everything"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-ravenclaw-everything"
    action: "Pass"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-slytherin-at-port-5353"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
    - portNumber:
        protocol: UDP
        port: 5353
  - name: "pass-from-slytherin-at-port-5353"
    action: "Pass"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
    - portNumber:
        protocol: UDP
        port: 5353
  - name: "allow-from-gryffindor-at-port-53"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    ports:
    - portNumber:
        protocol: UDP
        port: 53
  - name: "deny-from-gryffindor-everything-else"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
